# pydra-dcm2niix

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  conftest.py  import_script.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci-cd.yml  pythonpackage.yml
pydra/tasks/dcm2niix/: __init__.py  _version.py  base.py  utils.py
pydra/tasks/dcm2niix/tests/: test_utils.py
