[metadata]
author = Thomas G. Close
author_email = tom.g.close@gmail.com
description = Provides a task interface for the popular dcm2niix DICOM to NIfTI converter
long_description = file:README.md
long_description_content_type = text/markdown; variant=CommonMark
license = Apache License, 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.7
install_requires =
    pydra >= 0.19
packages = find_namespace:

[options.packages.find]
include =
    pydra.tasks.dcm2niix
    pydra.tasks.dcm2niix.*

[options.extras_require]
doc =
    packaging
    sphinx >= 2.1.2
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
test =
    pytest >= 4.4.0
    pytest-cov
    pytest-env
    pytest-xdist
    pytest-rerunfailures
    codecov
tests =
    %(test)s
dev =
    %(test)s
    black
    pre-commit
all =
    %(doc)s
    %(dev)s

[versioneer]
VCS = git
style = pep440
versionfile_source = pydra/tasks/dcm2niix/_version.py
versionfile_build = pydra/tasks/dcm2niix/_version.py
tag_prefix =
parentdir_prefix =
